<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.VerifyCodeFragment"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/codeEdText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:hint="@string/enterCodeHint"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#757575" />
    <Button
        android:id="@+id/continueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueText"
        android:layout_marginTop="5dp"/>
    <Button
        android:id="@+id/resendBtn"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resendText"
        android:layout_marginTop="5dp"/>

</LinearLayout>